--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,8 @@
           </span>
         </label>
 
-        <div class="trigger">
+        <div class="trigger">          
+          <a class="page-link" href="https://github.com/{{ site.social.github }}" target="_blank">GitHub</a>
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if my_page.title -%}
